# PixelGames

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: IPC.hpp  Resources.hpp  Util.hpp  WinInclude.hpp
res/: FileFormat.md  Test.res  libraries.res
res/Libraries/SFML/: Usage.txt
res/Libraries/wxWidgets/: Logo.xcf  Usage.txt
res/Libraries/zlib/: License.txt  Usage.txt
src/: Main.cpp
src/Export/: Unix.py
src/IPC/: IPC.cpp  IPCWindows.cpp
src/Pong-Single/: CMakeLists.txt  Main.cpp  Objects.cpp  Objects.hpp
src/ResFormatter/: CMakeLists.txt  EntryDialog.cpp  EntryPanel.cpp  Formatter.cpp  Formatter.h  FormatterImpl.cpp  FormatterImpl.hpp  resFormatter.fbp
src/Resources/: IO.cpp  IOold.cpp  Resources.cpp
src/Starter/: AboutDialog.cpp  CMakeLists.txt  LibrariesDialog.cpp  LibraryPanel.cpp  Starter.fbp  StarterFrame.cpp  StarterFrame.h  StarterImpl.cpp  StarterImpl.hpp
src/Starter/IPC/: IPC.cpp  IPCPosix.cpp
src/Util/: Base64.cpp  Util.cpp  Windows.cpp
